Replace targetList with inputs; add attempt model
Migrate task item model and runtime attempt tracking: replace legacy targetList/compat target projections with inputs (API/docs/tests updated); TaskMsg now projects latestAttemptWorkerId/latestAttemptWorkerContextId/latestAttemptBatchId instead of workerId/workerContextId/batchId. Introduce explicit TaskMsgAttempt lifecycle and trace events (TASK_MSG_ATTEMPT_CLOSED, TASK_MSG_LOGICALLY_FINAL, CALLBACK_REJECTED_NO_ACTIVE_ATTEMPT) and ensure callbacks must resolve a unique active attempt. Update controllers and read models (TaskApiController, tests, README, and doc files) to remove top-level compat target fields and expose per-item input/output. Add new engine listeners for attempt closure and logical finality; adjust engine/task manager behavior and tests to follow the new attempt/logic-final separation. Reorganize POMs: move/add Gson and logstash-logback to dependencyManagement and add Jackson/Gson/test deps to modules. Misc: delete unused Region model, update TaskMsgStatus descriptions to English, add SDK request model and example usage, and refresh mock/test data accordingly.